@@ -192,9 +192,6 @@ argument_list|)
 expr_stmt|;
 name|mapper
 operator|.
-name|getSerializationConfig
-argument_list|()
-operator|.
 name|setSerializationInclusion
 argument_list|(
 name|Inclusion
@@ -257,7 +254,7 @@ block|{
 return|return
 name|mapper
 operator|.
-name|defaultPrettyPrintingWriter
+name|writerWithDefaultPrettyPrinter
 argument_list|()
 operator|.
 name|writeValueAsString
